tas-kagit-makas yüklendi

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <div class="user" id="userChoice">
           <h2>Oyuncu</h2>
           <div class="user-choice">
-            <button id="rock">Taş</button>
-            <button id="paper">Kağıt</button>
-            <button id="scissors">Makas</button>
+            <button id="rock" class="oyunBtn">Taş</button>
+            <button id="paper" class="oyunBtn">Kağıt</button>
+            <button id="scissors" class="oyunBtn">Makas</button>
           </div>
         </div>
         <div class="computer">
